# 1500

./: .gitignore  GOTCHA.md  README.md  TASTE.md  about.html  data-index.html  index.html  judgement.html  oral-arguments.html  pyproject.toml
assets/: site.css
docs/: case_113_jinsu_51_press_release.md  court_press.md  court_video_urls.md
docs/transcripts/: 113年度金訴字第51號言詞辯論（114⧸12⧸15上午法庭錄影）.txt  113年度金訴字第51號言詞辯論（114⧸12⧸16上午法庭錄影）.txt  113年度金訴字第51號言詞辯論（114⧸12⧸17上午法庭錄影）.txt  113年度金訴字第51號言詞辯論（114⧸12⧸18上午法庭錄影）.txt  113年度金訴字第51號言詞辯論（114⧸12⧸18下午法庭錄影）.txt
docs/transcripts/large-v3/: 113年度金訴字第51號宣判_115_03_26下午法庭錄影.txt  113年度金訴字第51號言詞辯論_114_12_15上午法庭錄影.txt  113年度金訴字第51號言詞辯論_114_12_15下午法庭錄影.txt  113年度金訴字第51號言詞辯論_114_12_16上午法庭錄影.txt  113年度金訴字第51號言詞辯論_114_12_16下午法庭錄影.txt  113年度金訴字第51號言詞辯論_114_12_17上午法庭錄影.txt  113年度金訴字第51號言詞辯論_114_12_17下午法庭錄影.txt  113年度金訴字第51號言詞辯論_114_12_18上午法庭錄影.txt  113年度金訴字第51號言詞辯論_114_12_18下午法庭錄影.txt  113年度金訴字第51號言詞辯論_114_12_19上午法庭錄影.txt  113年度金訴字第51號言詞辯論_114_12_19下午法庭錄影.txt  113年度金訴字第51號言詞辯論_114_12_22上午法庭錄影.txt  (+4 more)
oral-arguments/: 114-12-15-am.html  114-12-15-pm.html  114-12-16-am.html  114-12-16-pm.html  114-12-17-am.html  114-12-17-pm.html  114-12-18-am.html  114-12-18-pm.html  114-12-19-am.html  114-12-19-pm.html  114-12-22-am.html  114-12-22-pm.html  114-12-23-pm.html  114-12-24-am.html  114-12-24-pm.html  115-03-26-pm.html
scripts/: check_oral_arguments_consistency.py  download_and_markdownify.py  download_and_markdownify_playwright.py  download_court_videos.py  download_court_videos.sh  transcribe_court_videos.py
tests/: test_download_court_videos.py
(+7 files in other folders)
