[project]
name = "1500"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "markdownify>=1.2.2",
    "openai-whisper>=20250625",
    "playwright>=1.58.0",
    "typer>=0.20.0",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "ty>=0.0.26",
]
